--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="//styles.css">
+    <style>
+        hr {
+    background-color: none;
+    height: 0px;
+    width: 4%;
+    border-style: none;
+    border-top: dotted;
+    border-width: 5px;
+    border-color: grey;
+   
+}
+
+h3 {
+
+    color: #66BFBF;
+}
+b{
+    background-color: none;
+    color: rgb(60, 224, 197);
+}
+        
+    </style>
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +31,7 @@
     <title>New Project</title>
 </head>
 
-<body>
+<body style="background-color: #DAE5D0;">
     <p><i>Hi ! My name is <b>Abhisek Ghosh</b></i></p>
     <table cellspacing="10">
         <tr>
